Fix for playback when an entity (not aggregate root) is loaded